# NeonGlyph

./: README.md
neonglyph/: .gitignore  README.md  config.json  main.py  pyproject.toml  requirements.txt
neonglyph/renderer/: adaptive.py  charset.py  color.py  effects.py  engine.py  export.py  grayscale.py  morphing.py  presets.py  resize.py  themes.py  utils.py  video.py
neonglyph/tests/: test_renderer.py
outputs/: test_1778944834.html
